Fixed title name with buttons and top bar sizes on mobiles

--- a/src/index.html
+++ b/src/index.html
@@ -152,11 +152,11 @@
 			</div>
 			<div class="main col-md-9 col-lg-10">
 				<div class="main-top row">
-					<div class="main-top-search col-9 col-md-10">
+					<div class="main-top-search col-8 col-md-9 col-lg-10">
 						<input type="text" class="main-top-search__input" placeholder="Click here to search for exercises, workouts, programs, etc…">
 						<img src="img/ic_search.png" alt="search" class="main-top-search__icon">
 					</div>
-					<div class="main-top-info col-3 col-md-2">
+					<div class="main-top-info col-4 col-md-3 col-lg-2">
 						<a href="#"><img src="img/ic_help.png" alt="help"></a>
 						<a href="#"><div class="profile-image" data-image="https://static.bhphotovideo.com/explora/sites/default/files/styles/960/public/briancolor.jpg?itok=ZVR85Ekm"></div></a>
 					</div>
