--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,9 @@
 		<div class="row h-100">
 			<div class="aside col-md-3 col-lg-2">
 				<div class="logo-container">
-					<img src="img/logo.png" alt="Worker Fitness & Health">
+					<a href="#">
+						<img src="img/logo.png" alt="Worker Fitness & Health">
+					</a>
 				</div>
 				<ul class="menu">
 					<li class="menu-item">
